--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 
 # RStudio files
 .Rproj.user/
+project.RProj
 
 # produced vignettes
 vignettes/*.html
@@ -47,3 +48,5 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+/.quarto/
