--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # History files
 .Rhistory
 .Rapp.history
-
+.DS_Store
 # Session Data files
 .RData
 .RDataTmp
@@ -20,7 +20,7 @@
 
 # RStudio files
 .Rproj.user/
-project.RProj
+r4ds-ggplot2.RProj
 
 # produced vignettes
 vignettes/*.html
