--- a/_output.yml
+++ b/_output.yml
@@ -1,10 +1,10 @@
 bookdown::gitbook:
   includes:
     in_header: includes/header.html
-    after_body: [includes/footer.html, includes/webex.js]
+    after_body: [includes/footer.html]
   md_extensions: -smart
   df_print: kable
-  css: [css/style.css, css/toc.css, css/webex.css]
+  css: [css/style.css, css/toc.css]
   config:
     toc:
       collapse: section
