--- a/_output.yml
+++ b/_output.yml
@@ -1,18 +1,16 @@
 bookdown::gitbook:
+  css: [css/styl.css,css/toc.css]
+  stylesheet: css/styl.css
   includes:
     in_header: includes/header.html
-    after_body: [includes/footer.html]
-  md_extensions: -smart
+    after_body: "scripts/collapse-output.html"
   df_print: kable
-  css: [css/style.css, css/toc.css]
   config:
     toc:
       collapse: section
     sharing:
       github: yes
       facebook: no
-    search:
-      engine: fuse
     download: ["pdf", "epub"]
     fig_height: 5.3
     fig_width: 8.5
@@ -22,7 +20,10 @@ bookdown::word_document2:
   fig_height: 5.3
   fig_width: 8.5
 bookdown::html_chapters:
-  css: [lessons/css/style.css, lessoons/css/toc.css]
+  includes:
+    in_header: includes/header.html
+    after_body: "scripts/uncover.html"
+  css: [css/styl.css,css/toc.css]
 bookdown::pdf_book:
   includes:
    in_header: lessons/preamble.tex
@@ -37,6 +38,13 @@ bookdown::pdf_book:
   toc_appendix: yes
   quote_footer: ["\\VA{", "}{}"]
 bookdown::epub_book:
+  includes:
+    in_header: includes/header.html
+    after_body: "scripts/uncover.html"
   dev: svglite
-  stylesheet: css/epub.css
-bookdown::bs4_book: default
+  stylesheet: css/styl.css
+bookdown::bs4_book:
+  includes:
+    in_header: includes/header.html
+    after_body: "scripts/uncover.html"
+  stylesheet: css/styl.css
