--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,14 +1,14 @@
 book_filename: "r4ds-ggplot2"
-new_session: no
+new_session: yes
 rmd_files:
   - index.Rmd
-  - lessons/01-communication.Rmd
-  - lessons/02-layers.Rmd
-  - lessons/03-dummy-script.Rmd
+  - 01-communication-answers.Rmd
+  - 02-layers-answers.Rmd
+  - 03-dummy-script.Rmd
 delete_merged_file: false
 chapter_name: "Chapter "
 language:
   label:
     fig: "Figure "
     tab: "Table "
-rmd_subdir: true
+# rmd_subdir: true
